--- a/templates/draw.html
+++ b/templates/draw.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-lg-2 control-label">Raw Features 1</label>
+                        <label class="col-lg-2 control-label">Features 1</label>
                         <div class="col-lg-2">
                             <select name="feature_1" class="form-control">
                                 <option>None</option>
@@ -39,7 +39,7 @@
                                 {% endfor %}
                             </select>
                         </div>
-                        <label class="col-lg-2 control-label">Raw Features 2</label>
+                        <label class="col-lg-2 control-label">Features 2</label>
                         <div class="col-lg-2">
                             <select name="feature_2" class="form-control">
                                 <option>None</option>
