--- a/templates/process.html
+++ b/templates/process.html
@@ -86,7 +86,7 @@
                 <input type="hidden" name="choose_data" value="{{ choose_data }}">
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Convert string to composition:</label>
-                    <input type="hidden" name="featurizer" value="strToComposition">
+                    <input type="hidden" name="featurizer" value="StrToComposition">
                     <div class="col-lg-4">
                         <select name="target_column" class="form-control"></select>
                     </div>
@@ -102,7 +102,7 @@
                 <input type="hidden" name="choose_data" value="{{ choose_data }}">
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Convert structure to composition:</label>
-                    <input type="hidden" name="featurizer" value="structureToComposition">
+                    <input type="hidden" name="featurizer" value="StructureToComposition">
                     <div class="col-lg-4">
                         <select name="target_column" class="form-control"></select>
                     </div>
