delete and download

--- a/templates/draw.html
+++ b/templates/draw.html
@@ -144,7 +144,7 @@
                     fig.open();
                     fig.write(retVal["image"]);
                     fig.close();
-                    let href = "/download/";
+                    let href = "/predict/download/";
                     let downloadBtn = $("#downloadPredict");
                     downloadBtn.attr("href", href);
                     downloadBtn.removeAttr("style");
