--- a/templates/process.html
+++ b/templates/process.html
@@ -75,6 +75,22 @@
                 <input type="hidden" name="job_id" value="{{ job_id }}">
                 <input type="hidden" name="choose_data" value="{{ choose_data }}">
                 <div class="form-group">
+                    <input type="hidden" name="featurizer" value="delete">
+                    <label class="col-lg-2 control-label">Delete volume:</label>
+                    <div class="col-lg-3">
+                        <select name="target_column" class="form-control"></select>
+                    </div>
+                    <div class="col-lg-1">
+                        <button class="btn btn-success" type="submit">
+                            <span class="glyphicon glyphicon-play"></span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+            <form class="form-horizontal" action="/job/process/" method="get">
+                <input type="hidden" name="job_id" value="{{ job_id }}">
+                <input type="hidden" name="choose_data" value="{{ choose_data }}">
+                <div class="form-group">
                     <label class="col-lg-3 control-label">Convert string to structure:</label>
                     <input type="hidden" name="featurizer" value="strToStructure">
                     <div class="col-lg-4">
