--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}数据中心{% endblock %}
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
